--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta name="description" content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,20 +22,30 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+   
+  <div id="root">
+   <h1>Getting Started with React</h1>
+   <script type="text/javascript">
+   let ul= React.createElement (
+   "ul", {style:{ color:"blue"}},
+   React.createElement("li", null, "Monday"),
+   React.createElement("li", null, "Tuesday"),
+   React.createElement("li", null, "Wednesday")
+   );
+   ReactDom.render (
+    <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+     </ul>,
+     document.getElementById("root")
+   );
+   </script>
+    </div>
+   </body>
 </html>
